--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "node": ">=14 <15"
   },
 	"scripts": {
-		"start": "nodemon index",
+		"start": "node index",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "yarn build"
 	},
