--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn build"
+    "build": "babel src -d lib",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
